--- a/css/brandx-style.css
+++ b/css/brandx-style.css
@@ -92,7 +92,7 @@ h1 {
     width: 232px;
     height: 33px;
     display: block;
-    background-image: url("../images/palais-royal.png");
+    background-image: url("../images/palaisroyal-logo.png");
     background-size: 100% auto;
     background-repeat: no-repeat;
     order: 1;
