--- a/css/brandx-style.css
+++ b/css/brandx-style.css
@@ -90,8 +90,8 @@ h1 {
     align-items: center;
   }
   .header .bx-logo {
-    width: 232px;
-    height: 95px;
+    width: 110px;
+    height: 46px;
     display: block;
     background-image: url("../images/palaisroyal-logo.png");
     background-size: 100% auto;
@@ -197,12 +197,11 @@ h1 {
   
   .bx-device-menu {
     position: fixed;
-    top: 10px;
-    right: 10px;
+    top: 4.5%;
+    right: 1%;
     width: 55px;
     height: 50px;
     z-index: 11;
-    background-color: #ffffff88;
     width: 45px;
     height: 40px;
     display: block;
@@ -224,7 +223,7 @@ h1 {
     width: 100%;
     height: 3px;
     left: 0;
-    background-color: #000000;
+    background-color: #ffffff;
     top: 5px;
     left: 0;
     /*     -webkit-transform: rotate(45deg);
